nginx-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: nginx
  labels:
    app: app
    type: frontend
spec:
  containers:
  - name: nginx
    image: nginx
